# data-orchestrator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini
src/application/: __init__.py  config.py  main.py
src/application/aws/: s3_manager.py
src/application/controllers/: elastic_controller.py  rabbitmq_http_controller.py  upload_file_http.py
src/application/data_classes/: metadata_dc.py  process_file_event_dc.py  tripdata_dc.py
src/application/enums/: allowed_extensions.py  elastic_inedexes.py  file_status.py  routing_keys.py  trip_types.py
src/application/extensions/: orchestrator_api_router.py
src/application/handlers/: clock_handler.py  file_manager_handler.py  rabbitmq_handler.py
src/application/indexes/: __init__.py  taxi_index.py
src/application/models/: __init__.py  base.py  metadata_model.py
src/application/services/: rabbitmq_service.py  spark_service.py  store_file_service.py
src/application/spark/: __init__.py  base.py  taxi_tripdata_schema.py
src/application/spark_ds/: __init__.py  taxi_tripdata_schema.py
src/migration/: env.py
src/migration/versions/: 2025_07_10_0334-1524fac8a368_first_revision.py  2025_07_20_0403-5656af14cda4_new_columns_for_file_metadata.py  2025_07_20_0412-05038af6d2dd_updated_zone_type_column.py
