[project]
name = "data-orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "HezinTUKE",email = "vova.gezin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "boto3 (>=1.39.4,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.16.3,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
